Ajout d'un thème sombre

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Logo -->
     <link rel="icon" type="image/gif" href="./video-player-icon.png" />
     <!--Title of the page-->
-    <title>Lecteur</title>
+    <title>Custom video player</title>
 </head>
 
 <body>
